--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Docker login
-      run: echo {{ secrets.DOCKER_PASSWORD }} | docker login --username {{ secrets.DOCKER_USERNAME }} --password-stdin
+      run: echo "{{ secrets.DOCKER_PASSWORD }}" | docker login --username "{{ secrets.DOCKER_USERNAME }}" --password-stdin
     - name: Build docker image
       run: make docker
     - name: Push docker image
