--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -8,6 +8,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build Docker Environment
       run: docker-compose run --entrypoint=/bin/bash dev
+    - name: Execute qa
+      run: cd qa && ./runtests.sh ....
     - name: Login to GitHub Docker Registry
       run: docker login docker.pkg.github.com --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
       env:
