--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,15 +1,10 @@
 FROM golang:1.11
 VOLUME /var/lib/openbazaar
 
-RUN wget https://www.python.org/ftp/python/3.6.0/Python-3.6.0.tgz && \
-    tar xvf Python-3.6.0.tgz && \
-    cd Python-3.6.0 && \
-    ./configure --enable-optimizations && \
-    make -j8
+RUN apt-get install software-properties-common python-software-properties
+RUN add-apt-repository ppa:jonathonf/python-3.6
 RUN apt-get update && apt-get install -yq zlib1g-dev libssl-dev unzip
-RUN cd Python-3.6.0 && \
-    make altinstall && \
-    ln -s /usr/local/bin/python3.6 /usr/local/bin/python3
+RUN apt-get install python3.6
 
 COPY ./qa/requirements.txt ./requirements.txt
 
