--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,7 +2,7 @@ FROM golang:1.11
 VOLUME /var/lib/openbazaar
 
 RUN apt-get -y update
-RUN apt-get install software-properties-common python-software-properties
+RUN apt-get install software-properties-common
 RUN add-apt-repository ppa:jonathonf/python-3.6
 RUN apt-get update && apt-get install -yq zlib1g-dev libssl-dev unzip
 RUN apt-get install python3.6
