--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,9 +3,8 @@ VOLUME /var/lib/openbazaar
 
 RUN apt-get -y update
 RUN apt-get -y install software-properties-common
-RUN add-apt-repository ppa:jonathonf/python-3.6
-RUN apt-get update && apt-get install -yq zlib1g-dev libssl-dev unzip
-RUN apt-get install python3.6
+RUN apt-get install -yq zlib1g-dev libssl-dev unzip
+RUN apt-get install python3
 
 COPY ./qa/requirements.txt ./requirements.txt
 
