--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,8 +8,8 @@ RUN apt-get install -y python3 python3-pip
 
 COPY ./qa/requirements.txt ./requirements.txt
 
-RUN python3 -m pip3 install --upgrade pip && \
-    python3 -m pip3 install -r requirements.txt && \
+RUN python3 -m pip install --upgrade pip && \
+    python3 -m pip install -r requirements.txt && \
     wget https://bitcoin.org/bin/bitcoin-core-0.16.3/bitcoin-0.16.3-x86_64-linux-gnu.tar.gz && \
     tar -xvzf bitcoin-0.16.3-x86_64-linux-gnu.tar.gz -C /opt
 
