index on reapply-lost-patch: 361c5e48 Restore patch from fdf79f52..c110900e

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,28 +1,4 @@
-FROM golang:1.11
-VOLUME /var/lib/openbazaar
-
-RUN wget https://www.python.org/ftp/python/3.6.0/Python-3.6.0.tgz && \
-    tar xvf Python-3.6.0.tgz && \
-    cd Python-3.6.0 && \
-    ./configure --enable-optimizations && \
-    make -j8
-RUN apt-get update && apt-get install -yq zlib1g-dev libssl-dev unzip
-RUN cd Python-3.6.0 && \
-    make altinstall && \
-    ln -s /usr/local/bin/python3.6 /usr/local/bin/python3
-
-COPY ./qa/requirements.txt ./requirements.txt
-
-RUN pip3.6 install --upgrade pip && \
-    pip3.6 install -r requirements.txt && \
-    wget https://bitcoin.org/bin/bitcoin-core-0.16.3/bitcoin-0.16.3-x86_64-linux-gnu.tar.gz && \
-    tar -xvzf bitcoin-0.16.3-x86_64-linux-gnu.tar.gz -C /opt
-
-RUN wget https://github.com/google/protobuf/releases/download/v3.6.0/protoc-3.6.0-linux-x86_64.zip && \
-    unzip ./protoc-3.6.0-linux-x86_64.zip -x readme.txt && \
-    mv ./include/* /usr/local/include/ && \
-    mv ./bin/protoc /usr/local/bin/ && \
-    rm -rf ./include ./bin
+FROM openbazaar/server-qa:0.10
 
 RUN go get -u github.com/gogo/protobuf/proto \
               github.com/golang/protobuf/protoc-gen-go \
