--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ env:
   - "PATH=/home/travis/gopath/bin:$PATH"
 before_install:
   - go get -u github.com/axw/gocov/gocov github.com/mattn/goveralls github.com/tcnksm/ghr
-  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | bash -s -- -b $GOPATH/bin v1.23.3
+  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | bash -s -- -b $GOPATH/bin v1.15.0
 install:
   - echo "No external dependencies required. Skipping travis default library dependency setup to use vendors..."
 script:
-  - $GOPATH/bin/golangci-lint run --deadline 10m --new-from-rev=
+  - $GOPATH/bin/golangci-lint run --deadline 10m --new-from-rev=24dc0f64
   - cd $TRAVIS_BUILD_DIR && go test -i && ./test_compile.sh
   - goveralls -coverprofile=coverage.out -service travis-ci -repotoken $COVERALLS_TOKEN
 after_success:
