--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   - "PATH=/home/travis/gopath/bin:$PATH"
 before_install:
   - go get -u github.com/axw/gocov/gocov github.com/mattn/goveralls github.com/tcnksm/ghr
-  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | bash -s -- -b $GOPATH/bin v1.23.3
+  - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.24.0
 install:
   - echo "No external dependencies required. Skipping travis default library dependency setup to use vendors..."
 script:
