--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -11,7 +11,7 @@ RUN cd /go/src/github.com/golang/protobuf && \
     cd protoc-gen-go && \
     go install
 
-RUN curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | bash -s -- -b $GOPATH/bin v1.15.0
+RUN curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.24.0
 
 WORKDIR /go/src/github.com/OpenBazaar/openbazaar-go
 
