--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openbazaar-go",
   "author": "OB1 Company",
-  "version": "0.14.2",
+  "version": "0.14.3-rc1",
   "language": "english",
   "license": "",
   "bugs": {
